--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,6 @@ img:hover {
 }
 
 .nav {
-    position: sticky;
-    top: 0;
     margin: 0;
     padding: 0px;
     width: 100%;
@@ -31,6 +29,11 @@ img:hover {
     font-size: 16px;
     overflow: hidden;
     text-align: center;
+}
+
+.sticky {
+    position: sticky;
+    top: 0;
 }
 
 .nav-link {
@@ -91,6 +94,7 @@ h3 {
 
 #projects {
     height: 100vh;
+    position: relative;
 }
 
 #contact {
@@ -99,6 +103,12 @@ h3 {
     margin-top: auto;
     margin-bottom: auto;
     text-align: center;
+    position: absolute;
+}
+
+.project {
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
