--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,21 @@ body {
     font-size: 14px;
     line-height: 1.5;
     text-align: left;
-    color: #333333;
+    color: #333;
     margin: 0;
     background-color: #f2f3f4;
 }
 
 img {
-    border: 1px solid #ddd;
+    border: 0.5px solid #ddd;
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px;
     width: 300px;
     height: 220px;
 }
 
 img:hover {
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+    box-shadow: 0 0 2px 1px #777;
 }
 
 .nav {
@@ -25,7 +25,7 @@ img:hover {
     padding: 0px;
     width: 100%;
     margin-top: 0px;
-    background-color: #777777;
+    background-color: #777;
     height: auto;
     font-size: 16px;
     overflow: hidden;
@@ -49,7 +49,7 @@ img:hover {
     color: white;
 }
 
-@media screen and (max-width: 850px) {
+@media screen (max-width: 850px) {
     .nav {
         width: 100%;
         height: auto;
@@ -61,12 +61,36 @@ img:hover {
     }
 }
 
-@media screen and (max-width: 400px) {
+
+/*
+    .project-container {
+        display: grid;
+        grid-template-columns: 200px;
+        grid-template-rows: 200px;
+    }
+    .project {
+        grid-column: 1;
+        grid-row: 1;
+    }*/
+
+@media screen (max-width: 400px) {
     .nav-link {
         text-align: center;
         float: center;
     }
 }
+
+
+/*
+    .project-container {
+        display: grid;
+        grid-template-columns: 200px;
+        grid-template-rows: 200px;
+    }
+    .project {
+        grid-column: 1;
+        grid-row: 1;
+    }*/
 
 main {
     background-color: #f2f3f4;
@@ -76,6 +100,7 @@ main {
 
 h1 {
     font-size: 40px;
+    text-shadow: 0px 10px 50px gray;
 }
 
 h2 {
@@ -109,13 +134,35 @@ h3 {
 
 .project-container {
     display: grid;
-    grid-template-columns: 350px 350px;
-    grid-template-rows: 350px 350px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-row-gap: 5px;
+    grid-column-gap: 5px;
 }
 
 .project {
     grid-column: auto;
     grid-row: auto;
+}
+
+.project-text-link {
+    font-size: 16px;
+    color: #444;
+    text-decoration: none;
+    padding: 10px;
+    float: center;
+}
+
+.project-text-link:hover {
+    color: gray;
+}
+
+#github-icon {
+    list-style-image: url(../personal-portfolio-page/images/github.png);
+}
+
+#twitter-icon {
+    list-style-image: url(../personal-portfolio-page/images/twitter.png);
 }
 
 footer {
