--- a/styles.css
+++ b/styles.css
@@ -124,12 +124,10 @@ h3 {
 }
 
 #contact {
-    display: block;
     height: 100vh;
-    margin-top: auto;
-    margin-bottom: auto;
     text-align: center;
-    position: absolute;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
 .project-container {
