--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ img:hover {
     color: white;
 }
 
-@media screen (max-width: 850px) {
+@media screen and (max-width: 850px) {
     .nav {
         width: 100%;
         height: auto;
@@ -59,21 +59,18 @@ img:hover {
     .nav-link {
         float: center;
     }
-}
-
-
-/*
     .project-container {
         display: grid;
-        grid-template-columns: 200px;
-        grid-template-rows: 200px;
+        grid-template-columns: 1fr;
+        grid-auto-rows: 1fr;
     }
     .project {
-        grid-column: 1;
-        grid-row: 1;
-    }*/
+        grid-column: minmax(0, 1fr);
+        grid-row: minmax(0, 1fr);
+    }
+}
 
-@media screen (max-width: 400px) {
+gridfl @media screen and (max-width: 400px) {
     .nav-link {
         text-align: center;
         float: center;
@@ -119,28 +116,45 @@ h3 {
     padding-bottom: 200px;
 }
 
-#projects {
+#project-area {
     height: 100vh;
+    padding-top: 50px;
+    text-align: center;
 }
 
 #contact {
     height: 100vh;
     text-align: center;
     padding-top: 200px;
-    padding-bottom: 200px;
+    padding-bottom: 0px;
 }
 
 .project-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-auto-rows: minmax(250px, auto);
     grid-row-gap: 5px;
     grid-column-gap: 5px;
 }
 
-.project {
-    grid-column: auto;
-    grid-row: auto;
+.project1 {
+    grid-column-start: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.project2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.project3 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.project4 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
 
 .project-text-link {
@@ -166,4 +180,5 @@ h3 {
 footer {
     font-size: 12px;
     text-align: center;
+    bottom: 0px;
 }
