--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ img:hover {
     }
 }
 
-gridfl @media screen and (max-width: 400px) {
+@media screen and (max-width: 400px) {
     .nav-link {
         text-align: center;
         float: center;
