--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue";
     font-size: 14px;
@@ -11,13 +15,9 @@ body {
 img {
     border: 0.5px solid #ddd;
     border-radius: 10px;
-    padding: 10px;
-    width: 300px;
-    height: 220px;
-}
-
-img:hover {
-    box-shadow: 0 0 2px 1px #777;
+    /* padding: 10px; */
+    max-width: 100%;
+    transition: 0.3s;
 }
 
 .nav {
@@ -47,34 +47,6 @@ img:hover {
 .nav-link:hover {
     background-color: #555;
     color: white;
-}
-
-@media screen and (max-width: 850px) {
-    .nav {
-        width: 100%;
-        height: auto;
-        position: sticky;
-        top: 0;
-    }
-    .nav-link {
-        float: center;
-    }
-    .project-container {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-auto-rows: 1fr;
-    }
-    .project {
-        grid-column: minmax(0, 1fr);
-        grid-row: minmax(0, 1fr);
-    }
-}
-
-@media screen and (max-width: 400px) {
-    .nav-link {
-        text-align: center;
-        float: center;
-    }
 }
 
 
@@ -117,7 +89,7 @@ h3 {
 }
 
 #project-area {
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 50px;
     text-align: center;
 }
@@ -131,13 +103,27 @@ h3 {
 
 .project-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: minmax(250px, auto);
-    grid-row-gap: 5px;
-    grid-column-gap: 5px;
+    /* grid-template-columns: 1fr 1fr; */
+    /* grid-auto-rows: minmax(250px, auto); */
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
 }
 
-.project1 {
+@media screen and (min-width: 700px) {
+    .project-container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .project-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+
+/* .project1 {
     grid-column-start: 1 / 2;
     grid-row: 1 / 2;
 }
@@ -155,18 +141,23 @@ h3 {
 .project4 {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-}
+} */
 
 .project-text-link {
+    display: block;
     font-size: 16px;
     color: #444;
     text-decoration: none;
     padding: 10px;
-    float: center;
+    transition: color 0.1s;
 }
 
 .project-text-link:hover {
     color: gray;
+}
+
+.project-text-link:hover img {
+    box-shadow: 0 0 2px 1px #777;
 }
 
 #github-icon {
